fix(helper): prevent overflow

--- a/css/helpers.css
+++ b/css/helpers.css
@@ -17,8 +17,12 @@
 	bottom: 100%;
 	transform: translateY(50%);
 	line-height: 1em;
-	padding: 0 var(--gap-small);
+	padding: var(--gap-small);
 	background-color: var(--color-base00);
+	max-width: 75%;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
 
 .container:hover > span:first-of-type {
